# my-assistant

./: .env.example  .gitignore  AGENTS.md  calendar_service.py  db_service.py  gemini_service.py  main.py  pyproject.toml  sleep_service.py  todoist_service.py  weather_service.py
